--- a/RuntimeComponent/packages.config
+++ b/RuntimeComponent/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.VCRTForwarders.140" version="1.0.6" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.191018.6" targetFramework="native" />
   <package id="Microsoft.WinUI" version="3.0.0-preview1.200420.4-CI" targetFramework="native" />
 </packages>
