--- a/WinUI3_Wpf_Islands/WinUI3_Wpf_Islands.csproj
+++ b/WinUI3_Wpf_Islands/WinUI3_Wpf_Islands.csproj
@@ -4,9 +4,13 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp5.0</TargetFramework>
     <UseWPF>true</UseWPF>
-    <Platforms>AnyCPU;x86</Platforms>
+    <Platforms>AnyCPU;x86;x64</Platforms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VCRTForwarders.140" Version="1.0.6" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RuntimeComponent.Projection\RuntimeComponent.Projection.csproj" />
